--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,12 @@ button {
     cursor: pointer;
     flex: 1;
 }
-
+button:focus {
+    box-shadow: 0px 0px 5px 5px rgba(255,255,255,.8);
+}
+input:focus {
+    box-shadow: 0px 0px 5px 5px rgba(255,168,0,.8);
+}
 .in-front {
     position: fixed;
     z-index: 10;
